# disc-vpc01

./: AUDIO.icns  CDDRIVE.icns  README.MD  README_RU.MD  effects.py  engine.py  gui.py  requirements.txt  rt_gui.py
.github/workflows/: python-app.yml
rt_cpp/: CMakeLists.txt  vcpkg.json
rt_cpp/cmake/: Info.plist.in  embed_binary.cmake  embed_shader.cmake
rt_cpp/resources/: app.rc
rt_cpp/src/: main.cpp
rt_cpp/src/audio/: audio_analyzer.cpp  audio_analyzer.h  audio_stats.h  segment.cpp  segment.h
rt_cpp/src/control/: midi_control.cpp  midi_control.h
rt_cpp/src/core/: log.cpp  log.h
rt_cpp/src/effects/: effect_chain.cpp  effect_chain.h
rt_cpp/src/effects/shaders/: ascii.frag  bad_signal.frag  bitcrush.frag  block_glitch.frag  canvas_place.frag  chroma_key.frag  color_bleed.frag  common.vert  deriv_warp.frag  dither.frag  feedback_loop.frag  fisheye.frag  flash.frag  fractal_noise.frag  ghost_trails.frag  interlace.frag  kali_mirror.frag  mosaic.frag  mvec_bloom.frag  negative.frag  passthrough.frag  pframe_lag.frag  phase_shift.frag  pixel_drift.frag  pixel_sort.frag  rgb_shift.frag  scanlines.frag  self_cannibalize.frag  self_disp.frag  stutter.frag  temporal_rgb.frag  vhs_tracking.frag  viz_alchemy.frag  viz_bars.frag  viz_plasma.frag  viz_radial.frag  vortex.frag  waveshaper.frag  zoom_glitch.frag
rt_cpp/src/engine/: rt_engine.cpp  rt_engine.h
rt_cpp/src/gui/: font_loader.cpp  font_loader.h  mac_dialogs.mm  native_dialogs.h  output_window.cpp  output_window.h  rt_gui.cpp  rt_gui.h  theme.cpp  theme.h  win95.cpp  win95.h
rt_cpp/src/presets/: preset_manager.cpp  preset_manager.h
rt_cpp/src/video/: overlay_manager.cpp  overlay_manager.h  video_pool.cpp  video_pool.h  video_source.cpp  video_source.h
tests/: conftest.py  test_analysis_cache.py  test_analyzer.py  test_audio_defects.py  test_audio_reactive_fx.py  test_effects.py  test_effects_nav.py  test_encoders.py  test_engine.py  test_formula.py  test_hw_fallback.py  test_hw_smoke.py  test_mystery.py  test_new_effects.py  test_paint.py  test_photo_source.py  test_preset_apply.py  test_preview_player.py  test_preview_seconds.py  test_registry.py  test_render_config.py  test_render_regression.py  test_sink_command.py  test_sink_writer.py  test_subtitles.py  test_true_datamosh.py  test_visualizer.py  test_warp.py
tools/: bench_render.py  build_pyinstaller.py  check_hw_encoders.py  disc_vpc_utf8.manifest  pyi_rth_inner_dll_libs.py
vpc/: __init__.py  __main__.py  analyzer.py  fonts.py  gui.py  mystery.py  paths.py  registry.py
vpc/audio/: __init__.py  defects.py  pipeline.py
vpc/effects/: __init__.py  _dvd_logo_data.py  base.py  broken.py  complex_fx.py  core.py  degradation.py  formula.py  glitch.py  mask_modes.py  mosh.py  overlay.py  paint.py  signal.py  subtitles.py  vhs.py  virus.py  warp.py
vpc/effects/visualizer/: __init__.py  abstraction.py  alchemy.py  base.py  compose.py  reactive.py  scope.py  spectrum.py
vpc/render/: __init__.py  analysis_cache.py  config.py  encoders.py  engine.py  engine_setup.py  image_source.py  preview_player.py  quality.py  reactor.py  sink.py  source.py  window.py
